revised code for mobi first

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -46,5 +46,5 @@ html(lang="en")
                                 h2 Anne Wallace
                                 h3 Verified Buyer
                         p "Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"
-        //- footer
-        //-     p Challeng by <a>frontendmentor</a>. Coded by <a>cerebro_cerberus</a>.
+        footer
+            p Challeng by <a>frontendmentor</a>. Coded by <a>cerebro_cerberus</a>.
