--- a/css/style.css
+++ b/css/style.css
@@ -27,91 +27,69 @@ li {
 *::after {
   box-sizing: border-box;
 }
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #222;
-}
 .main-container {
-  background: url("../assets/bg-pattern-top-desktop.svg"), url("../assets/bg-pattern-bottom-desktop.svg") #fff;
+  background: url("../assets/bg-pattern-top-mobile.svg"), url("../assets/bg-pattern-bottom-mobile.svg") #fff;
   background-repeat: no-repeat, no-repeat;
   background-position: top left, bottom right;
-  max-width: 95.86rem;
+  padding: 4rem 1rem;
 }
-main {
-  margin: 9rem 11rem;
-}
-.prod {
-  display: flex;
-}
+/*for >= 270px viewport*/
 .prod-state {
-  width: 50%;
+  text-align: center;
 }
 .prod-state__head {
-  width: 11ch;
   color: #502050;
-  font-size: 3.1rem;
-  line-height: 1;
+  font-size: 1.5rem;
 }
 .prod-state__txt {
   color: #937b92;
-  font-size: 1rem;
+  font-size: 0.7rem;
   font-weight: 500;
   line-height: 1.7;
-  width: 90%;
   margin-top: 1rem;
 }
-.prod-rate {
-  width: 50%;
+.rate {
+  margin-top: 1.4rem;
 }
-.prod .rate {
+.rate li {
   display: flex;
   flex-direction: column;
+  text-align: center;
+  background-color: #f7f2f7;
+  margin-bottom: 0.8rem;
+  padding: 0.7rem;
 }
-.prod .rate li {
-  background: #f7f2f7;
-  padding: 1.4rem;
-  margin-top: 1rem;
-  width: 80%;
-}
-.prod .rate li:nth-child(2) {
-  align-self: center;
-}
-.prod .rate li:nth-child(3) {
-  align-self: flex-end;
-}
-.prod .rate__img img {
+.rate__img img {
+  width: 0.89rem;
   margin-left: 0.5rem;
 }
-.prod .rate__txt {
-  margin-left: 1.3rem;
+.rate__txt {
+  font-size: 0.7rem;
   color: #502050;
-  font-weight: 900;
+  font-weight: 700;
+  margin-top: 0.4rem;
 }
 .reviews-container {
-  display: flex;
-  margin-top: 4rem;
-  gap: 2rem;
+  margin-top: 2rem;
 }
 .card {
-  background: #502050;
+  background-color: #502050;
+  padding: 1.2rem;
+  margin-top: 1rem;
   border-radius: 0.5rem;
-  padding: 2rem;
 }
 .card__top {
   display: flex;
 }
 .card__top div img {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2.3rem;
+  height: 2.3rem;
   border-radius: 50%;
 }
 .card__top div:nth-child(2) {
+  font-size: 0.7rem;
+  margin-left: 1.4rem;
   align-self: center;
-  font-size: 0.9rem;
-  margin-left: 1rem;
 }
 .card__top div:nth-child(2) h2 {
   color: #fff;
@@ -119,11 +97,48 @@ main {
 }
 .card__top div:nth-child(2) h3 {
   color: #ee68a4;
-  font-weight: 400;
+  font-weight: 500;
 }
 .card p {
+  font-size: 0.79rem;
   color: #fff;
-  margin-top: 1.2rem;
-  font-size: 0.9rem;
-  line-height: 1.7;
+  line-height: 1.5;
+  margin-top: 1.4rem;
+}
+footer {
+  display: none;
+}
+/*for >= 375px viewport styles*/
+@media screen and (min-width: 25em) {
+  .main-container {
+    padding: 2rem 1.5rem;
+  }
+  .prod-state__head {
+    font-size: 2.2rem;
+    padding: 2rem 2rem 0;
+  }
+  .prod-state__txt {
+    font-size: 0.94rem;
+    line-height: 1.9;
+  }
+  .rate__img img {
+    width: 1.2rem;
+  }
+  .rate__txt {
+    font-size: 0.9rem;
+  }
+  .card {
+    padding: 2rem;
+  }
+  .card__top div img {
+    width: 3rem;
+    height: 3rem;
+  }
+  .card__top div:nth-child(2) {
+    font-size: 0.9rem;
+  }
+  .card p {
+    font-size: 0.89rem;
+    line-height: 1.7;
+  }
 }
