--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -12,7 +12,7 @@ $prd-txt-cl = hsl(303, 10%, 53%)
 html,body
     height 100%
 
-html,body,div,span,p,h1,h2,h3,img,ul,li
+html,body,div,span,p,h1,h2,h3,img,ul,li,main
     margin 0
     padding 0
     list-style none
