--- a/pug/index.pug
+++ b/pug/index.pug
@@ -47,4 +47,4 @@ html(lang="en")
                                 h3 Verified Buyer
                         p "Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"
         footer
-            p Challeng by <a>frontendmentor</a>. Coded by <a>cerebro_cerberus</a>.
+            p Challeng by <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA" target="_blank">frontendmentor</a>. Coded by <a href="https://github.com/iamcerebrocerberus/" target="_blank">cerebro_cerberus</a>.
