--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,12 @@ h3,
 img,
 ul,
 li,
-main {
+main,
+a {
   margin: 0;
   padding: 0;
   list-style: none;
+  text-decoration: none;
 }
 * {
   font-size: 100%;
@@ -59,6 +61,7 @@ main {
   background-color: #f7f2f7;
   margin-bottom: 0.8rem;
   padding: 0.7rem;
+  border-radius: 0.5rem;
 }
 .rate__img img {
   width: 0.89rem;
@@ -102,6 +105,7 @@ main {
 }
 .card p {
   font-size: 0.79rem;
+  font-weight: 500;
   color: #fff;
   line-height: 1.5;
   margin-top: 1.4rem;
@@ -109,7 +113,7 @@ main {
 footer {
   display: none;
 }
-/*for >= 375px viewport styles*/
+/*for >= 345px viewport styles*/
 @media screen and (min-width: 23.6em) {
   .main-container {
     padding: 2rem 1.5rem;
@@ -132,8 +136,8 @@ footer {
     padding: 2rem;
   }
   .card__top div img {
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
   }
   .card__top div:nth-child(2) {
     font-size: 0.9rem;
@@ -141,5 +145,104 @@ footer {
   .card p {
     font-size: 0.89rem;
     line-height: 1.7;
+  }
+}
+/*for >= 1180px viewport styles*/
+@media screen and (min-width: 78.6666em) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #222;
+  }
+  .main-container {
+    background: url("../assets/bg-pattern-top-desktop.svg"), url("../assets/bg-pattern-bottom-desktop.svg") #fff;
+    background-repeat: no-repeat, no-repeat;
+    background-position: top left, bottom right;
+    max-width: 96em;
+    padding: 8.7rem 11rem;
+  }
+  .prod {
+    display: flex;
+  }
+  .prod-state {
+    width: 50%;
+    text-align: left;
+  }
+  .prod-state__head {
+    padding: 0;
+    font-size: 3rem;
+    min-width: 80%;
+  }
+  .prod-rate {
+    width: 50%;
+  }
+  .rate {
+    display: flex;
+    flex-direction: column;
+  }
+  .rate li {
+    flex-direction: row;
+    padding: 1rem;
+  }
+  .rate li:nth-child(1) {
+    align-self: flex-start;
+  }
+  .rate li:nth-child(2) {
+    align-self: center;
+  }
+  .rate li:nth-child(3) {
+    align-self: flex-end;
+  }
+  .rate__txt {
+    margin: 0;
+    align-self: center;
+    margin-left: 1rem;
+  }
+  .reviews-container {
+    display: flex;
+    gap: 2rem;
+  }
+  .card:nth-child(2) {
+    transform: translateY(1.4rem);
+  }
+  .card:nth-child(3) {
+    transform: translateY(2.1rem);
+  }
+}
+@media screen and (min-width: 89.4666em) {
+  .prod {
+    display: flex;
+  }
+  .prod-state__head {
+    font-size: 3.2rem;
+    font-weight: 900;
+    line-height: 1;
+    width: 50%;
+  }
+  .prod-state__txt {
+    font-size: 1rem;
+    width: 86%;
+    line-height: 1.7;
+  }
+  .rate li {
+    padding: 1.2rem 3.5rem 1.2rem 1.2rem;
+  }
+  .rate__txt {
+    margin-left: 2rem;
+  }
+  .reviews-container {
+    margin-top: 3rem;
+  }
+  .card {
+    padding: 2.5rem 2rem;
+  }
+  footer {
+    display: block;
+    color: #fff;
+    margin-top: 1rem;
+    font-size: 0.9rem;
+    font-weight: 100;
   }
 }
