--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -26,215 +26,220 @@ html,body,div,span,p,h1,h2,h3,img,ul,li,main,a
     &::before,&::after
         box-sizing border-box
         
-.main-container
-    background url('../assets/bg-pattern-top-mobile.svg'),url('../assets/bg-pattern-bottom-mobile.svg') $cl-white
+body
+    background url('../assets/bg-pattern-top-mobile.svg'), url('../assets/bg-pattern-bottom-mobile.svg')
     background-repeat no-repeat, no-repeat
     background-position top left, bottom right
-    // background-size 100%, 100%
     padding 4rem 1rem
 
-/*for >= 270px viewport*/
 .prod
-    &-state
+    &-statement
         text-align center
         &__head
             color $big-head-cl
-            font-size 1.5rem
-            
-        &__txt
-            color $prd-txt-cl
-            font-size .7rem
-            font-weight 500
-            line-height 1.7
+            font-size 1.9rem
+            font-weight 900
+        &__txt 
             margin-top 1rem
+            color $prd-txt-cl
+            font-size .8rem
+            line-height 1.2
+            font-weight 500
 
-.rate
-    margin-top 1.4rem
-    li
-        display flex
-        flex-direction column
-        text-align center
-        background-color $star-bg-cl
-        margin-bottom .8rem
-        padding .7rem
-        border-radius .5rem
+    &-rate
+        margin-top 1rem
+        ul
+            li
+                background $star-bg-cl
+                display flex
+                flex-direction column
+                text-align center
+                padding .6rem
+                margin-bottom 1rem
+                border-radius .3rem
 
-    &__img img
-        width .89rem
-        margin-left .5rem
+                .star
+                    &__img img 
+                        width .8rem
+                        margin-left .4rem
 
-    &__txt
-        font-size .7rem
-        color $rate-txt-cl
-        font-weight 700
-        margin-top .4rem
+                    &__txt
+                        font-size .6rem
+                        color $big-head-cl
+                        font-weight 900
+                        margin-top .3rem
 
-.reviews-container
+.reviews
     margin-top 2rem
-    
+
 .card
-    background-color $card-bg-cl
-    padding 1.2rem
-    margin-top 1rem
-    border-radius .5rem
-
-    &__top
+    background $card-bg-cl
+    padding 1.5rem
+    border-radius .4rem
+    margin-bottom 1rem
+    &-top
         display flex
-
-        div img
-            width 2.3rem
+        &__img img
+            width 2.2rem
             height @width
             border-radius 50%
-
-        div:nth-child(2)
+        &__txt
             font-size .7rem
-            margin-left 1.4rem
             align-self center
+            margin-left 1rem
             h2
                 color $cl-white
-                margin-bottom .3rem
+                margin-bottom .2rem
             h3
                 color $veri-cl
                 font-weight 500
-    
     p
-        font-size .79rem
-        font-weight 500
+        margin-top 1rem
+        font-size .7rem
         color $cl-white
-        line-height 1.5
-        margin-top 1.4rem
+        line-height 1.4
 
 footer 
     display none
 
-
-/*for >= 345px viewport styles*/
-@media screen and (min-width: 23.6em)
-    .main-container
-        padding 2rem 1.5rem
-        
-
+@media screen and (min-width 24.933em)
     .prod
-        &-state
+        &-statement
             &__head
-                font-size 2.2rem
-                padding 2rem 2rem 0
-
-            &__txt
-                font-size .94rem
-                line-height 1.9
-
-
-    .rate
-        &__img img
-            width 1.2rem
-
-        &__txt
-            font-size .9rem
-
-    .card
-        padding 2rem
-        &__top
-            div img
-                width 2.5rem
-                height @width
-
-            div:nth-child(2)
-                font-size .9rem
-
-        p
-            font-size .89rem
-            line-height 1.7
-
-
-/*for >= 1180px viewport styles*/
-@media screen and (min-width: 78.6666em)
-    body
-        display flex
-        flex-direction column
-        justify-content center
-        align-items center
-        background rgb(34, 34, 34)
-
-    .main-container
-        background url('../assets/bg-pattern-top-desktop.svg'),url('../assets/bg-pattern-bottom-desktop.svg') $cl-white
-        background-repeat no-repeat, no-repeat
-        background-position top left, bottom right
-        max-width: 96em
-        padding 8.7rem 11rem
-
-    .prod
-        display flex
-        &-state
-            width 50%
-            text-align left
-            &__head
-                padding 0
-                font-size 3rem
-                min-width 80%
+                font-size 2.3rem
+            &__txt 
+                margin-top 1rem
+                font-size 1.02rem
+                line-height 1.5
 
         &-rate
-            width 50%
+            margin-top 1rem
+            ul
+                li
+                    padding 1.03rem
+                    .star
+                        &__img img 
+                            width .97rem
+                            margin-left .5rem
 
-    .rate
-        display flex
-        flex-direction column
-        li
-            flex-direction row
-            padding 1rem
-            &:nth-child(1)
-                align-self flex-start
-            &:nth-child(2)
-                align-self center
-            &:nth-child(3)
-                align-self flex-end
-
-        &__txt
-            margin 0
-            align-self center
-            margin-left 1rem
-
-    
-    .reviews-container
-        display flex
-        gap 2rem
-
+                        &__txt
+                            font-size .8rem
     .card
-        &:nth-child(2)
-            transform translateY(1.4rem)
-        &:nth-child(3)
-            transform translateY(2.1rem)
+        padding 2rem
+        margin-bottom 1rem
+        &-top
+            &__img img
+                width 2.3rem
+                height @width
+            &__txt
+                font-size .8rem
+                margin-left 1.3rem
+        p
+            margin-top 1rem
+            font-size .91rem
+            color $cl-white
+            line-height 1.7     
 
+@media screen and (min-width 39.6em)
+    body
+        background url('../assets/bg-pattern-top-desktop.svg'), url('../assets/bg-pattern-bottom-desktop.svg')
+        background-repeat no-repeat, no-repeat
+        background-position top left, bottom right
+        display flex
+        justify-content center
+        align-items center
+        height auto
 
+    main
+        max-width 37.7333em
 
-@media screen and (min-width: 89.4666em)
+@media screen and (min-width 66.666em)
+    body
+        padding 20rem 0 /*ultimate zoom padding -just a hack-*/
+        height 100vh
+        flex-direction column
+    main
+        max-width 73.333em    
     .prod
         display flex
-        &-state
+        &-statement
+            text-align left
+            width 30em
             &__head
-                font-size 3.2rem
-                font-weight 900
-                line-height 1
-                width 50%
+                font-size 2.7rem
             &__txt
-                font-size 1rem
-                width 86%
-                line-height 1.7
-    .rate
-        li
-            padding 1.2rem 3.5rem 1.2rem 1.2rem
-        &__txt
-            margin-left 2rem
+                font-size .93rem
 
-    .reviews-container
-        margin-top 3rem
+        &-rate
+            margin-left auto
+            ul
+                li
+                    flex-direction row
+                    padding 1.3rem 3.6rem 1.3rem 2rem
+                    &:nth-child(1)
+                        transform translateX(-4.5rem)
 
-    .card
-        padding 2.5rem 2rem
+                    &:nth-child(2)
+                        transform translateX(-3rem)
+
+                    .star
+                        &__txt
+                            margin 0 0 0 1.5rem
+                            align-self center
+
+    .reviews
+        margin-top 4rem
+        display flex
+        gap 1.4rem
+
+        .card
+            &:nth-child(2)
+                transform translateY(1.3rem)
+            &:nth-child(3)
+                transform translateY(2.5rem)
 
     footer 
         display block
-        color $cl-white
-        margin-top 1rem
-        font-size .9rem
-        font-weight 100
+        margin-top 3rem
+        font-size .89rem
+        font-weight 400
+
+@media screen and (min-width 75.73333em)
+    .prod
+        &-statement
+            &__head
+                font-size 3.2rem
+                line-height 1
+            &__txt
+                font-size .93rem
+                line-height 1.7
+        &-rate
+            ul
+                li
+                    padding 1.3rem 3.6rem 1.3rem 2rem
+                    &:nth-child(1)
+                        transform translateX(-7rem)
+
+                    &:nth-child(2)
+                        transform translateX(-3.3rem)
+
+                    .star
+                        &__img img
+                            width 1.2rem
+                        &__txt
+                            font-size .9rem
+    .card
+        padding 2rem
+        margin-bottom 1rem
+        &-top
+            &__img img
+                width 2.8rem
+                height @width
+            &__txt
+                font-size .9rem
+                margin-left 1.3rem
+        p
+            margin-top 1rem
+            font-size .91rem
+            color $cl-white
+            line-height 1.7                         
