--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -9,9 +9,6 @@ $star-bg-cl = hsl(300, 24%, 96%)
 $cl-white = hsl(0, 0%, 100%)
 $prd-txt-cl = hsl(303, 10%, 53%)
 
-html,body
-    height 100%
-
 html,body,div,span,p,h1,h2,h3,img,ul,li,main,a
     margin 0
     padding 0
@@ -145,18 +142,36 @@ footer
         background url('../assets/bg-pattern-top-desktop.svg'), url('../assets/bg-pattern-bottom-desktop.svg')
         background-repeat no-repeat, no-repeat
         background-position top left, bottom right
+        min-height 100vh
         display flex
         justify-content center
         align-items center
-        height auto
-
+        padding 5rem
+        
     main
         max-width 37.7333em
 
+
+    .prod
+        &-statement
+            &__head
+                font-size 2.3rem
+            &__txt 
+                margin-top 1rem
+                font-size 1rem
+                line-height 1.5
+
+    .card
+        p
+            margin-top 1rem
+            font-size .89rem
+            color $cl-white
+            line-height 1.4
+
+
 @media screen and (min-width 66.666em)
     body
-        padding 20rem 0 /*ultimate zoom padding -just a hack-*/
-        height 100vh
+        padding 2rem
         flex-direction column
     main
         max-width 73.333em    
